# Haicam

./: .gitignore  .gitmodules  3rd-party-licenses.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  haicam-toolchain.Dockerfile  run_docker.sh
docs/: development-guide.txt  gm8136-audio.txt  gm8136-video.txt  gpio-ircut-motor-button.txt  test-gm8136-rpi-with-qemu.txt
flutter/haicam_ffi/: .metadata  README.md  ffigen.yaml  pubspec.yaml
flutter/haicam_ffi/android/: build.gradle  settings.gradle
flutter/haicam_ffi/android/src/main/: AndroidManifest.xml
flutter/haicam_ffi/example/: README.md  pubspec.yaml
flutter/haicam_ffi/example/android/app/: build.gradle
flutter/haicam_ffi/example/ios/Runner/: Info.plist
flutter/haicam_ffi/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/haicam_ffi/example/lib/: main.dart
flutter/haicam_ffi/example/linux/: CMakeLists.txt  my_application.cc
flutter/haicam_ffi/example/linux/flutter/: generated_plugins.cmake
flutter/haicam_ffi/example/macos/Runner.xcodeproj/: project.pbxproj
flutter/haicam_ffi/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter/haicam_ffi/example/windows/: CMakeLists.txt
flutter/haicam_ffi/example/windows/flutter/: generated_plugins.cmake
flutter/haicam_ffi/example/windows/runner/: Runner.rc  main.cpp
flutter/haicam_ffi/ios/: haicam_ffi.podspec
flutter/haicam_ffi/ios/Classes/: haicam_ffi.c
flutter/haicam_ffi/lib/: haicam_ffi.dart  haicam_ffi_bindings_generated.dart
flutter/haicam_ffi/linux/: CMakeLists.txt
flutter/haicam_ffi/macos/: haicam_ffi.podspec
flutter/haicam_ffi/src/: CMakeLists.txt  haicam_ffi.c  haicam_ffi.h
flutter/haicam_ffi/windows/: CMakeLists.txt
golang/: Android.mk  CMakeLists.txt  P2Peer.cpp  P2Peer.h  android_box_build.sh  android_build.sh  discovery.cpp  discovery.go  discovery.h  dlfcn.c  dlfcn.h  gm8136_box_build.sh  go.mod  go.sum  ifaddrs-android.h  ifaddrs.cpp  ifaddrs.h  ios_build.sh  linux32_box_build.sh  linux64_box_build.sh  mac_box_build.sh  p2p.go  rpi_box_build.sh  serialport.go  websocket.cpp  websocket.go  websocket.h  win_box_build.sh
golang/box_proj/: CMakeLists.txt
golang/haicam/: P2Peer.h  discovery.h  websocket.h
golang/libs/mdns/: conn.go
golang/libs/onvif/: Device.go  go.mod  go.sum
golang/libs/onvif/event/: operation.go
golang/libs/onvif/examples/: DeviceService.go  foo.db  sql.go  test.go
golang/libs/onvif/haicam_test/: database.go  discoverytest.go  haicambox.db  network.go
golang/libs/onvif/networking/: networking.go
golang/libs/onvif/ws-discovery/: networking.go
golang/libs/onvif/xsd/onvif/: onvif.go
golang/libs/transport/vnet/: net.go
include/haicam/: AES.hpp  AudioEncoder.hpp  AudioInput.hpp  AudioOutput.hpp  Buffer.hpp  ByteBuffer.hpp  Camera.hpp  Chan.hpp  Config.h  Config.hpp  Context.hpp  Encryption.hpp  FrameCommand.hpp  GatewayConnection.hpp  H264SensorSimulator.hpp  ImageSensor.hpp  Led.hpp  MacroDefs.hpp  Observable.hpp  PacketHeader.hpp  PeerConn.hpp  PeerManager.hpp  QRCodeScanner.hpp  RSA.hpp  RSAKey.hpp  RTSPServer.hpp  RunOnMainThread.hpp  RunOnThread.hpp  Runnable.hpp  SSLClient.hpp  SSLTCPClient.hpp  SSLUDP.hpp  SafeQueue.hpp  ServerConnection.hpp  SoundWaveReceiver.hpp  TCPClient.hpp  TCPConnection.hpp  TCPServer.hpp  TcpServer.hpp  ThreadWorker.hpp  (+9 more)
include/haicam/gm8136/: Led.hpp
include/haicam/platform/: AudioEncoder.hpp  AudioInput.hpp  AudioOutput.hpp  Camera.hpp  Config.hpp  Led.hpp  VideoEncoder.hpp  VideoInput.hpp  Watchdog.hpp
include/haicam/platform/model/: AudioEncoder.hpp  AudioInput.hpp  AudioOutput.hpp  Camera.hpp  Config.hpp  Led.hpp  VideoEncoder.hpp  VideoInput.hpp  Watchdog.hpp
libs/cameras/gm8136/sdk_v2/include/gm8136/: gmlib.h  gmlib_v1.h
libs/chan/mac/x86_64/lib/: libchan.0.dylib  libchan.dylib  libchan.la
libs/chan/rpi/armv7/lib/: libchan.la
libs/chan/windows/x86_64/lib/: libchan.la
libs/curl/gm8136/armv5/lib/pkgconfig/: libcurl.pc
libs/curl/linux/x86_64/lib/pkgconfig/: libcurl.pc
libs/curl/mac/x86_64/lib/pkgconfig/: libcurl.pc
libs/curl/rpi/armv7/lib/pkgconfig/: libcurl.pc
libs/jsoncpp/: jsoncpp.cpp
libs/jsoncpp/json/: json-forwards.h  json.h
libs/libuv/gm8136/armv5/lib/: libuv.so.1.0.0
libs/libuv/ios/arm64/lib/: libuv.1.0.0.dylib
libs/libuv/linux/i386/lib/: libuv.so.1.0.0
libs/libuv/linux/x86_64/lib/: libuv.so.1.0.0
libs/libuv/mac/x86_64/lib/: libuv.1.0.0.dylib
libs/libuv/rpi/armv7/lib/: libuv.so.1.0.0
libs/liquid/mac/x86_64/lib/: libliquid.dylib
libs/quid/gm8136/armv5/include/: fec.h
libs/zbar/mac/x86_64/lib/: libzbar.la
libs/zbar/windows/x86_64/lib/: libzbar.la
resource/simulator-data/: aac.data  h264.data
src/: AES.cpp  Camera.cpp  Config.cpp  Config_c.cpp  Context.cpp  Encryption.cpp  FrameCommand.cpp  GatewayConnection.cpp  H264SensorSimulator.cpp  HaicamContext.cpp  HaicamContext.hpp  ImageSensor.cpp  Led.cpp  PeerConn.cpp  PeerManager.cpp  QRCodeScanner.cpp  RTSPServer.cpp  RunOnMainThread.cpp  RunOnThread.cpp  SSLClient.cpp  SSLTCPClient.cpp  SSLUDP.cpp  ServerConnection.cpp  SoundWaveReceiver.c  SoundWaveReceiver.cpp  SoundWaveReceiver.h  TCPClient.cpp  TCPConnection.cpp  TCPServer.cpp  Timer.cpp  UDP.cpp  UserDefault.cpp  Utils.cpp  Utils_c.cpp  VideoInput.cpp  Watchdog.cpp  main.cpp
src/camera/: main.cpp
src/general/: VideoEncoder.cpp
src/gm8136/: AudioInput.cpp  AudioOutput.cpp  BoardMgr.c  BoardMgr.h  Camera.cpp  HardwareEncryption.c  HardwareEncryption.h  Led.cpp  VideoInput.cpp  Watchdog.cpp
src/linux/: AudioEncoder.cpp  AudioInput.cpp  AudioOutput.cpp  Camera.cpp  VideoEncoder.cpp  VideoInput.cpp  Watchdog.cpp
src/linux/generic/: Camera.cpp
src/mac/: AudioEncoder.cpp  AudioInput.cpp  VideoInput.cpp
test/: ChanTest.cpp  ContextTest.cpp  EncryptionTest.cpp  H264SensorSimulatorTest.cpp  QRCodeScannerTest.cpp  SoundWaveReceiverTest.cpp  TCPClientTest.cpp  TCPServerTest.cpp  TCPTest.cpp  TCPTest1.cpp  TimerTest.cpp  UDPTest.cpp  UDPTest2.cpp  sample1.cpp  sample1.h  sample1_unittest.cpp
test/gm8136/: LedTest.cpp
test/gm8136/e21/: LedTest.cpp
test/linux/: OpencvTest.cpp  SDLTest.cpp
(+156 files in other folders)
